# rust-test

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: input.txt  main.rs  question1.rs  question2.rs  question3.rs  question4.rs  question5.rs  question6.rs
